tests/miniJava/neg/006707_mutation.MiniJava
class java { public static void static Main ( String [ ] java ) { { } } }
